      60-libsane1.rules (Closes: #868312).
  * Replace libsane.udev with libsane1.udev at TROUBLESHOOTING.Debian
    and libsane1.README.Debian.
  * debian/control:
    + Add Breaks and Replaces to the package libsane1 (Closes: #868308).
    + Remove outdated Recommends libsane-extras from libsane1
      (Closes: #868265).
  * debian/sane-utils.postrm:
    + Reenable set -e and masquerade update-inetd calls with "|| true".
  * Rebuild symbols files (Closes: #868309).

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200

sane-backends (1.0.27-1~experimental1) experimental; urgency=medium

  * New upstream release
    - sane.ps is not longer included (Closes: #818544).
    - Fix a timing issue on USB3 hardware  (Closes: #792465).
    - Support CanoScan LiDE 120 (Closes: #853873).
    - Refresh patches:
      + 0020-nousbtest.patch
      + 0025-multiarch_manpages_libdir.patch
      + 0705-kfreebsd.patch
      + 0710-sane-desc.c_debian_mods.patch
    - Remove patches applied upstream:
      + 0005-libsane_deps.patch
      + 0010-unneeded_doc.patch
      + 0015-frontend_libs.patch
      + 0030-ppc64el.patch
      + 0100-source_spelling.patch
      + 0105-hp3900.patch
      + 0110-dll_backend_conf.patch
      + 0115-license_typo.patch
      + 0120-typo.patch
      + 0125-multiarch_dll_search_path.patch
      + 0135-saned-remotescanners.patch
      + 0500-CVE-2017-6318.patch
      + 0605-man_typo.patch
      + 0700-mk_reproducible_results.patch
  * New debian/patches/0140-avahi.patch
    - Avoid assertion failure when net_avahi_init failed (Closes: #861112).
  * New debian/patches/0145-avahi.patch:
    - Fix race condition (Closes: #743420).
  * debian/rules:
    - Remove outdated configure flag --enable-libusb_1_0.
    - Add new configure flag --withusb.
    - Use dh_auto_configure instead of ./configure.
  * Remove outdated debian/libsane-dev.NEWS (Closes: #852842).
  * debian/sane-uitls.postinst: