@@ -1,0 +1,1 @@
+/lib/udev/hwdb.d/
