@@ -10,8 +10,11 @@ sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
     + Remove outdated Recommends libsane-extras from libsane1
       (Closes: #868265).
   * debian/sane-utils.postrm:
-    + Reenable set -e and masquerade update-inetd calls with "|| true".
+    + Enable set -e and masquerade update-inetd calls with "|| true".
   * Rebuild symbols files (Closes: #868309).
+  * Use the hwdb+udev format (Closes: #869244):
+    - debian/rules: Change override_dh_installudev-arch.
+    - New file libsane1.dirs for /lib/udev/hwdb.d/.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
 
